<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">twitter</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registro</string>
    <string name="userName">Usuario</string>
    <string name="userPass">Password</string>
    <string name="btn_accept">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="conf_pass">Confirmar Password</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_reg">Registrar</string>
    <string name="tv_reg">Registrarse</string>
    <string name="title_activity_principal">Principal</string>
    <string name="btn_search">Buscar</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
